# Redes

./: README.md
Juego1/TransportProtocol/: TransportProtocol.h  calculoLuminico.cpp  client.cpp  main  main.cpp  server.cpp
Juego1/src/: CMakeLists.txt
Juego1/src/gradius/: CMakeLists.txt
Juego1/src/gradius/include/: Client.h  Mesh.h  Model.h  TransportProtocol.h  camera.h  shader.h
Juego1/src/gradius/shaders/: shader.fs  shader.vs
Juego1/src/gradius/src/: Client.cpp  Mesh.cpp  Model.cpp  main.cpp
Juego1/src/gradius/textures/mountains/: mountain.mtl
Juego1/src/gradius/textures/ship/: ship_destroyer.mtl
version 1/: clientTCP.cpp  serverTCP.cpp
version 2/: clientTCP.cpp  serverTCP.cpp
version 3/: clientTCP.cpp  server.exe.stackdump  serverTCP.cpp
version 3/user1/: asd.docx  test.txt
version 3/user2/: client.exe.stackdump
